# emerald

./: .gitignore  Cargo.toml  README.md
migrations/: 20210222071712_guild_info.sql  20210223064549_greeting_info.sql  20210309023349_greeting_info.sql  20210309031231_amnesiac_messages.sql  20210324105547_logging.sql  20210326064307_logging.sql  20210327115906_logging.sql
src/: main.rs
src/commands/: amnesiac.rs  config.rs  meta.rs  mod.rs  rolecolour.rs  rolegreet.rs
src/helpers/: db.rs  mod.rs  perms.rs
src/logging/: log.rs
src/structures/: data.rs
