[package]
name = "silver"
version = "0.1.0"
authors = ["TheUserCreated <boswinle001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.24"
tracing-subscriber = "0.2.16"
dashmap = "4.0.2"
sqlx = { version = "0.5.1", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid"]}
[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "current"
features = ["client", "standard_framework", "voice", "rustls_backend", "builder", "http", "model", "utils", "cache"]
