[package]
name = "emerald"
version = "0.2.0"
authors = ["TheUserCreated <zalgo@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.24"
tracing-subscriber = "0.2.16"
dashmap = "4.0.1"
sqlx = { version = "0.5.1", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid"]}
serenity_utils = "0.6.1"
image = "0.23.14"
color-thief = "0.2"
reqwest = "0.11.2"
[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]
[dependencies.serenity]
version = "0.10.4"
features = ["client", "standard_framework", "voice", "rustls_backend", "builder", "http", "model", "utils", "cache"]

[profile.release]
lto=true
opt-level=3